# CS466_sub

./: .gitignore  notes.txt
lab1/: lab1.c
lab2/: .gitignore  CMakeLists.txt  lab2.c
lab3/: CMakeLists.txt  lab3.c
lab4/: CMakeLists.txt  lab4.c  myAssert.h
lab5/: CMakeLists.txt  lab5Master.c  lab5Slave.c  mSpi.h  pinout.h
